@@ -1,6 +1,7 @@
 v1.5 - Pending
 	+ Replace artist view for library with genre view
 	+ Display covers for albums in artist/genre views
+	+ Switch back to last tab on second cover art click
 	+ Retain selection in lists after removing items
 	+ Hidden config option to expand notebook tabs (tabs_expanded)
 	+ Bug: Fix artwork for artists/albums with "/" in them (e.g. AC/DC)
